--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    -webkit-transition: all 0.25s ease;
+
 }
 
 /*.card:after {
@@ -34,10 +34,25 @@
     -webkit-transition: all 0.5s linear;
 }*/
 
-.chart {
+.chart-closed {
+    width: 100%;
+    height: 0;
+    padding: 0 24px;
+    margin: 0;
+    opacity: 0;
+    background-color: #fff;
+    border-radius: 3px;
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
+    -webkit-transition: all 0.25s linear;
+}
+
+.chart-open {
+    width: 100%;
     height: auto;
-    background-color: #999;
-    margin: 0 .75rem;
+    padding: 24px;
+    opacity: 1;
+    -webkit-transition: all 0.25s linear;
+    margin-bottom: 20px;
 }
 
 .row {
