--- a/css/style.css
+++ b/css/style.css
@@ -102,3 +102,8 @@
     width: 1024px;
     margin: 0 auto;
 }
+.cryptocurrency {
+    margin-bottom: 20px;
+    margin-left: 50px;
+    color: #fff721;
+}
