--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,12 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+body {
+    padding: 20px;
+    background: lightslategray;
+}
+
 .card-responsive{
     display: grid;
     grid-gap: 20px;
@@ -12,6 +18,34 @@
 .col {
     width: auto;
 }
+
+.waves-effect{
+    /*display: block;*/
+    margin-bottom: 10px;
+}
+
+.modal.modal-fixed-footer {
+    height: 85%;
+}
+.modal {
+    max-height: 100vh;
+    width: 80%;
+    top: 5%;
+}
+
+#slide-out {
+    padding-top: 10px;
+}
+
+#slide-out a {
+    display: block;
+}
+
+#slide-out h4 {
+    text-align: center;
+    margin: 0 0 10px 0;
+}
+
 @media (min-width: 320px) {
     .card-responsive {
         width: 100%;
@@ -21,6 +55,27 @@
     }
     .card-responsive {
         grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+    }
+
+    .pup{
+        font-size: 9px;
+        text-align: center;
+        margin: 20px 10px 0 0;
+        line-height: 10px;
+        height: auto;
+        padding: 5px;
+        text-transform: none;
+    }
+}
+.rotate__mobile{
+    display: none;
+}
+@media (max-width: 480px) {
+    .container-grap{
+        display: none;
+    }
+    .rotate__mobile{
+        display: block;
     }
 }
 @media  (min-width: 480px) {
@@ -33,6 +88,7 @@
     .card-responsive {
         grid-template-columns: repeat(1, 1fr);
     }
+
 }
 @media only screen and (min-width: 601px) {
     .card-responsive {
@@ -51,6 +107,15 @@
     }
     .card-responsive {
         grid-template-columns: repeat(2, 1fr);
+    }
+    .pup{
+        border: none;
+        border-radius: 2px;
+        display: inline-block;
+        height: 36px;
+        line-height: 36px;
+        padding: 0 2rem;
+        text-transform: uppercase;
     }
 }
 @media  (min-width: 960px) {
@@ -76,29 +141,61 @@
     }
 }
 
-.up { color: rgba(9, 230, 52, 0.54); }
-.down { color: rgba(230, 58, 54, 0.54); }
+.up { 
+    color: rgba(9, 230, 52, 1);
+    font-size: 1.1rem;
+    font-weight: bold;
+ }
+.down { 
+    color: rgba(230, 58, 54, 1);
+    font-size: 1.1rem;
+    font-weight: bold; 
+}
+
+.card .card-image {
+    padding-top: 20px; 
+}
 
 .card .card-image img {
     width: 50%;
     margin: auto;
+    max-height: 220px;
+    min-height: 220px;
 }
 .card .card-image .card-title {
     color: black;
+    display: block;
+    position: static;
+    text-align: center;
+    font-weight: bold;
 }
 .change-box {
     display: flex;
 }
 .card-content .change-box .change-item {
     display: block;
-    width: 90px;
+    /* width: 90px; */
     height: 30px;
     margin: auto;
+    font-weight: 500;
 }
 .card-sub-title {
     text-align: center;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .container{
-    width: 1024px;
+    min-width: 320px;
+    max-width: 1024px;
     margin: 0 auto;
+}
+
+.container-grap div {
+    display: flex;
+    margin: auto;
+    width: 70%;
+    justify-content: space-evenly;
+}
+
+a {
+    color: orange;
 }
