--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,15 @@
 }
 
 body {
-    overflow:hidden;
+    /*overflow: hidden;*/
     padding: 20px;
     background: lightslategray;
 }
+.container{
+    max-width: 1024px;
+    margin: 0 auto;
+}
+
 
 .card-responsive{
     display: grid;
@@ -21,7 +26,6 @@ body {
 }
 
 .waves-effect{
-    /*display: block;*/
     margin-bottom: 10px;
 }
 
@@ -58,6 +62,7 @@ body {
         grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
     }
 }
+
 @media  (min-width: 480px) {
     .card-responsive  {
         width: 100%;
@@ -152,11 +157,6 @@ body {
 .card-sub-title {
     text-align: center;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-.container{
-    min-width: 320px;
-    max-width: 1024px;
-    margin: 0 auto;
 }
 
 .container-grap div {
