--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body {
     background: lightslategray;
 }
 .container{
+
     max-width: 1024px;
     margin: 0 auto;
 }
@@ -135,7 +136,7 @@ body {
     width: 50%;
     margin: auto;
     max-height: 220px;
-    min-height: 220px;
+    /*min-height: 220px;*/
 }
 .card .card-image .card-title {
     color: black;
