--- a/css/style.css
+++ b/css/style.css
@@ -130,6 +130,7 @@ body {
     margin: auto;
     max-height: 220px;
     min-height: 220px;
+
 }
 .card .card-image .card-title {
     color: black;
@@ -137,7 +138,26 @@ body {
     position: static;
     text-align: center;
     font-weight: bold;
+    font-family: 'Shrikhand', cursive;
 }
+.card:hover > .card-image img {
+    animation: mymove 1.2s infinite;
+}
+@keyframes mymove {
+    0%   {transform: rotateY(0deg);} 
+    10%  {transform: rotateY(36deg);}
+    20%  {transform: rotateY(72deg);}
+    30%  {transform: rotateY(108deg);}
+    40% {transform: rotateY(144deg);}
+    50% {transform: rotateY(180deg);}
+    60% {transform: rotateY(216deg);}
+    70% {transform: rotateY(252deg);}
+    80% {transform: rotateY(288deg);}
+    90% {transform: rotateY(324deg);}
+    100% {transform: rotateY(359deg);}
+}
+
+
 .change-box {
     display: flex;
 }
@@ -150,7 +170,10 @@ body {
 }
 .card-sub-title {
     text-align: center;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    /*font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;*/
+    font-family: 'Istok Web', sans-serif;
+    font-size: 30px;
+    font-weight: bold;
 }
 .container{
     min-width: 320px;
@@ -167,4 +190,9 @@ body {
 
 a {
     color: orange;
+}
+p {
+    font-family: 'Istok Web', sans-serif;
+    font-weight: bold;
+    font-size: 15px;
 }
